# aether

./: .codex-instructions  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/aether-analysis/: Cargo.toml
crates/aether-analysis/src/: causal.rs  coupling.rs  drift.rs  graph_algorithms.rs  health.rs  intent.rs  lib.rs  refactor.rs  sir_quality_signals.rs  test_intents.rs
crates/aether-config/: Cargo.toml
crates/aether-config/src/: analysis.rs  batch.rs  constants.rs  continuous.rs  contracts.rs  embeddings.rs  health.rs  inference.rs  lib.rs  normalize.rs  planner.rs  root.rs  search.rs  seismograph.rs  sir_quality.rs  storage.rs  validate.rs  verification.rs  watcher.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: git.rs  lib.rs  secret.rs
crates/aether-core/tests/: git_context.rs
crates/aether-dashboard/: Cargo.toml
crates/aether-dashboard/src/: lib.rs  narrative.rs  state.rs  support.rs  tests.rs
crates/aether-dashboard/src/api/: anatomy.rs  architecture.rs  ask.rs  autopsy.rs  batch.rs  blast_radius.rs  catalog.rs  causal_chain.rs  changes.rs  common.rs  context.rs  context_build.rs  context_export.rs  continuous.rs  contracts.rs  coupling.rs  coupling_matrix.rs  daemon_status.rs  decompose.rs  difficulty.rs  drift.rs  drift_timeline.rs  enhance.rs  file.rs  fingerprint.rs  flow.rs  glossary.rs  graph.rs  health.rs  health_score.rs  health_scorecard.rs  memory_timeline.rs  mod.rs  overview.rs  presets.rs  prompts.rs  search.rs  seismograph.rs  settings.rs  spec.rs  (+7 more)
crates/aether-dashboard/src/fragments/: anatomy.rs  architecture.rs  ask.rs  autopsy.rs  batch.rs  blast_radius.rs  causal.rs  changes.rs  context.rs  context_builder.rs  context_export.rs  continuous.rs  contracts.rs  coupling.rs  coupling_chord.rs  decompose.rs  drift_table.rs  drift_timeline.rs  file.rs  fingerprint.rs  flow.rs  glossary.rs  graph.rs  health.rs  health_score.rs  health_scorecard.rs  memory_timeline.rs  mod.rs  overview.rs  presets.rs  prompts.rs  search_results.rs  seismograph_gauge.rs  seismograph_plates.rs  seismograph_timeline.rs  spec.rs  staleness_heatmap.rs  stubs.rs  symbol.rs  symbol_detail.rs  (+4 more)
crates/aether-dashboard/src/static/: charts.js  index.html  style.css  wizard.html
crates/aether-dashboard/tests/: dashboard_integration.rs
crates/aether-desktop/: Cargo.toml  tauri.conf.json
crates/aether-desktop/src/: commands.rs  main.rs  notifications.rs  tray.rs  updater.rs  wizard.rs
crates/aether-desktop/src/static/: index.html
crates/aether-document/: Cargo.toml
crates/aether-document/src/: annotator.rs  edge.rs  embedding.rs  lib.rs  parser.rs  record.rs  registry.rs  temporal.rs  unit.rs  vector_backend.rs
crates/aether-health/: Cargo.toml
crates/aether-health/src/: archetypes.rs  compare.rs  explanations.rs  git_signals.rs  history.rs  lib.rs  metrics.rs  models.rs  output.rs  planner.rs  planner_communities.rs  refactor.rs  scanner.rs  scoring.rs  semantic_signals.rs
crates/aether-health/src/planner_communities/: ablation.rs  anchors.rs  graph.rs  merge.rs  rescue.rs
crates/aether-health/tests/: real_workspace.rs
crates/aether-infer/: Cargo.toml
crates/aether-infer/src/: http.rs  lib.rs  loaders.rs  sir_parsing.rs  sir_prompt.rs  types.rs
crates/aether-infer/src/embedding/: candle.rs  gemini_native.rs  mod.rs  openai_compat.rs  qwen3_local.rs
crates/aether-infer/src/providers/: gemini.rs  mod.rs  openai_compat.rs  qwen_local.rs  tiered.rs
crates/aether-infer/src/reranker/: candle.rs  cohere.rs  mod.rs
crates/aether-infer/tests/: candle_integration.rs  reranker_integration.rs
crates/aether-lsp/: Cargo.toml
crates/aether-lsp/src/: lib.rs
crates/aether-mcp/: Cargo.toml
crates/aether-mcp/src/: error.rs  lib.rs  main.rs  state.rs
crates/aether-mcp/src/tools/: audit.rs  common.rs  context.rs  contract.rs  cross_symbol.rs  drift.rs  enhance.rs  health.rs  history.rs  impact.rs  memory.rs  mod.rs  refactor.rs  router.rs  search.rs  sir.rs  sir_inject.rs  status.rs  trait_split.rs  usage_matrix.rs  verification.rs
crates/aether-mcp/tests/: mcp_tools.rs
crates/aether-memory/: Cargo.toml
crates/aether-memory/src/: dedup.rs  lib.rs  note.rs  ranking.rs  search.rs  unified_query.rs
crates/aether-parse/: Cargo.toml
crates/aether-parse/src/: lib.rs  parser.rs  registry.rs
crates/aether-parse/src/languages/: python.rs  rust.rs  typescript.rs
crates/aether-parse/src/queries/: python_edges.scm  python_symbols.scm  python_test_intents.scm  (+6 more)
crates/aether-parse/tests/: python_support.rs
crates/aether-query/: Cargo.toml
crates/aether-query/src/: config.rs  health.rs  lib.rs  main.rs  server.rs
crates/aether-query/tests/: integration.rs
crates/aether-store/: Cargo.toml
crates/aether-store/src/: analysis.rs  audit.rs  contracts.rs  document_store.rs  document_vector_store.rs  embeddings.rs  fingerprint_history.rs  graph.rs  graph_cozo.rs  graph_cozo_compat.rs  graph_migrate.rs  graph_sqlite.rs  graph_surreal.rs  lexical.rs  lib.rs  lifecycle.rs  project_notes.rs  schema.rs  seismograph.rs  sir_history.rs  sir_meta.rs  snapshots.rs  symbols.rs  task_context_history.rs  test_intents.rs  thresholds.rs  time.rs  vector.rs  write_intents.rs
crates/aether-store/tests/: document_migration_regression.rs  document_store.rs  document_vector_store.rs
crates/aetherd/: Cargo.toml
crates/aetherd/src/: audit_report.rs  calibrate.rs  causal.rs  cli.rs  context_presets.rs  context_renderers.rs  context_slicer.rs  coupling.rs  daemon_client.rs  daemon_detect.rs  drift.rs  enhance.rs  enhance_templates.rs  fsck.rs  health.rs  health_score.rs  indexer.rs  init_agent.rs  intent.rs  lib.rs  main.rs  memory.rs  observer.rs  priority_queue.rs  quality.rs  refactor_prep.rs  search.rs  setup_local.rs  sir_agent_support.rs  sir_context.rs  sir_diff.rs  sir_inject.rs  sir_pipeline.rs  sir_quality.rs  task_context.rs  test_intents.rs  time.rs  verification.rs  verify_intent.rs
crates/aetherd/tests/: phase1_step2.rs  phase1_step3_lsp.rs  phase1_step4_lsp_index.rs
(+345 files in other folders)
