[workspace]
members = [
    "crates/aetherd",
    "crates/aether-core",
    "crates/aether-config",
    "crates/aether-parse",
    "crates/aether-sir",
    "crates/aether-store",
    "crates/aether-infer",
    "crates/aether-lsp",
    "crates/aether-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AETHER"]

[workspace.dependencies]
arrow-array = "54"
arrow-schema = "54"
async-trait = "0.1"
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
cozo = { version = "0.7", default-features = false, features = ["storage-sled", "graph-algo"] }
gix = { version = "0.76", default-features = false, features = ["max-performance-safe", "blame", "revision"] }
lancedb = { version = "0.23", default-features = false }
lzma-sys = { version = "*", features = ["static"] }
notify = "6.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
walkdir = "2.5"
