[package]
name = "aether-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
aether-infer = { path = "../aether-infer" }
aether-memory = { path = "../aether-memory" }
aether-store = { path = "../aether-store" }
gix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile.workspace = true
