[package]
name = "aether-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
