[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
gix.workspace = true
schemars = "1.2"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
