[package]
name = "aether-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-analysis = { path = "../aether-analysis" }
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
aether-health = { path = "../aether-health" }
aether-infer = { path = "../aether-infer" }
aether-memory = { path = "../aether-memory" }
aether-store = { path = "../aether-store" }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
rust-embed = { workspace = true }
maud = { workspace = true, features = ["axum"] }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
