[package]
name = "aether-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }

# Internal deps — link the engine directly
aether-config = { path = "../aether-config" }
aether-dashboard = { path = "../aether-dashboard" }
aether-store = { path = "../aether-store" }
aetherd = { path = "../aetherd" }
