[package]
name = "aether-document"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-infer = { path = "../aether-infer" }
async-trait.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
