[package]
name = "aether-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-config = { path = "../aether-config" }
aether-sir = { path = "../aether-sir" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
