[package]
name = "aether-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
anyhow.workspace = true
blake3.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
streaming-iterator.workspace = true
