[package]
name = "aether-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aether-query"
path = "src/main.rs"
test = false

[dependencies]
aether-core = { path = "../aether-core" }
aether-config = { path = "../aether-config" }
aether-store = { path = "../aether-store" }
aether-memory = { path = "../aether-memory" }
aether-analysis = { path = "../aether-analysis" }
aether-mcp = { path = "../aether-mcp" }
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.14.0", features = ["transport-streamable-http-server"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "signal"] }
toml.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
