[package]
name = "aether-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
cozo.workspace = true
futures = "0.3"
lancedb.workspace = true
lzma-sys.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
