[package]
name = "aether-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
legacy-cozo = ["dep:cozo"]

[dependencies]
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
cozo = { workspace = true, optional = true }
futures = "0.3"
lancedb.workspace = true
lzma-sys.workspace = true
petgraph = "0.6"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
