[package]
name = "aetherd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
dashboard = ["dep:aether-dashboard"]

[[bin]]
name = "aetherd"
path = "src/main.rs"
test = false

[dependencies]
aether-analysis = { path = "../aether-analysis" }
aether-dashboard = { path = "../aether-dashboard", optional = true }
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
aether-health = { path = "../aether-health" }
aether-memory = { path = "../aether-memory" }
aether-infer = { path = "../aether-infer" }
aether-lsp = { path = "../aether-lsp" }
aether-parse = { path = "../aether-parse" }
aether-sir = { path = "../aether-sir" }
aether-store = { path = "../aether-store" }
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
ignore = "0.4"
notify.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
gix.workspace = true
aether-graph-algo = { path = "../aether-graph-algo" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tower-lsp = "0.20"
